index.css
/*

Project: AGSCraft software solutions officialsite
Dev: Thamarai Selvan
Started: 01/09/2023 
Ended: 07/09/2023


README
  this is order of styling here
    - reset
    - Common styling (eg. 100vh page size, centered contents)
    - DOM styling follows HTML stack
    - courses and services section shares same styling in some places

*/

[data-color-scheme="light"] {
  --c-primary: hsl(0, 0%, 100%);
  --c-secondary: hsl(288, 92%, 37%);
  --c-text: hsl(0, 0%, 0%);
  --c-glass: hsla(0, 0%, 0%, 0.025);
}

[data-color-scheme="dark"] {
  --c-primary: hsl(0, 0%, 0%);
  --c-secondary: hsl(288, 92%, 37%);
  --c-text: hsl(0, 0%, 100%);
  --c-glass: hsla(0, 0%, 100%, 0.1);
}
[data-color-scheme="dark"] nav > a > img {
  filter: invert(0);
}

html {
  scroll-behavior: smooth;
  overflow-x: hidden;
}

* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  font-family: Poppins;
  color: var(--c-text);
  font-weight: 500;
}

body {
  background: var(--c-primary);
  position: relative;
  overflow-x: hidden;
}

section,
footer {
  position: relative;
  z-index: 2;
}

h1 {
  font-size: clamp(3rem, 10vw, 5.5rem);
  line-height: 85%;
  letter-spacing: clamp(-0.2rem, -10vw, -0.05rem);
}

h2 {
  font-size: clamp(1.5rem, 10vw, 4rem);
  letter-spacing: clamp(-0.13rem, -1vw, -0.025rem);
}

a {
  text-decoration: none;
  font-weight: 100;
}

p {
  font-weight: 100;
  line-height: 115%;
  max-width: 50rem;
}

/* ----- common styling starts here ----- */
.page {
  padding: 5rem clamp(2rem, 4vw, 4rem);
  /* min-height: 100vh; */
  height: min-content;
  max-width: 90rem;
  margin-inline: auto;
}

.centered-contents {
  display: flex;
  flex-direction: column;
  justify-content: center;
}
/* ----- common styling ends here ----- */

/* ----- bubble styling starts here ----- */
#bubbles {
  position: absolute;
  width: 100%;
  height: 100%;
  z-index: 1;
  top: 0;
}
.bubble {
  height: 50vmax;
  aspect-ratio: 1;
  background: var(--c-secondary);
  opacity: 0.4;
  position: absolute;
  border-radius: 50%;
  filter: blur(10vmax);
}

.bubble:nth-child(1) {
  right: 50%;
  top: -25vw;
}
.bubble:nth-child(2) {
  top: 10%;
  right: -15vw;
}
.bubble:nth-child(3) {
  right: 50%;
  top: 20%;
}
.bubble:nth-child(4) {
  top: 30%;
  right: -10%;
}
.bubble:nth-child(5) {
  right: 75%;
  top: 40%;
}
.bubble:nth-child(6) {
  top: 50%;
  left: 50%;
}
.bubble:nth-child(7) {
  top: 70%;
}
.bubble:nth-child(8) {
  bottom: 0;
  right: -25%;
}
/* ----- bubble styling ends here ----- */

/* ----- nav styling starts here ----- */
nav {
  display: flex;
  justify-content: space-between;
  align-items: center;
  background: var(--c-glass);
  padding: 1rem 2rem;
  box-shadow: 0 10px 10px hsla(0, 0%, 0%, 0.1);
  position: fixed;
  width: 100%;
  backdrop-filter: blur(3px);
  z-index: 100;
}

nav > * {
  display: flex;
}

nav > a {
  gap: clamp(0.5rem, 2vw, 0.75rem);
}

nav > a > img {
  height: clamp(1.5rem, 2vw, 1.75rem);
  filter: invert();
}

nav > div > i {
  align-self: center;
}

nav > div > i:not(:nth-child(3)) {
  margin-right: 1.5rem;
}

nav > div > a {
  display: none;
  height: 100%;
  padding: 1rem 2rem;
  transition: 0.2s ease-in-out;
  position: relative;
}

nav a:not(:nth-child(1)):hover {
  background: var(--c-glass);
}
nav .active::after {
  content: "";
  background: white;
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 0.1rem;
}

#mobile-nav {
  position: fixed;
  height: 50vh;
  width: 0%;
  background: hsla(0, 0%, 0%, 0.5);
  top: 0;
  right: 0;
  backdrop-filter: blur(10px);
  display: grid;
  place-items: center;
  transition: 0.2s ease-in-out;
  z-index: 200;
}

#mobile-nav > * {
  width: 100%;
  height: 100%;
  text-align: center;
  display: grid;
  align-items: center;
  transition: 0.2s ease-in-out;
}

#mobile-nav > *:hover {
  background: var(--c-glass);
}
#mobile-nav h3 {
  position: relative;
}
#mobile-nav .active {
  border: 1px solid var(--c-glass);
}

/* ----- nav styling ends here ----- */

/* ----- home styling ends here ----- */
#home {
  height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 2rem;
  min-width: 98vw;
}

#home * {
  text-align: center;
}

#home h1 {
  width: 90%;
  text-transform: uppercase;
}

#home p {
  width: clamp(21rem, 50vw, 55rem);
}
/* ----- home styling ends here ----- */

/* ----- about styling starts here ----- */
#about h1 {
  text-align: center;
}

.about-card {
  display: grid;
  gap: 1rem;
  margin-top: 5rem;
}

#about h3 {
  text-align: center;
}

#about img {
  height: clamp(10rem, 20vw, 13rem);
  margin-inline: auto;
}

#about p {
  text-align: center;
  width: clamp(21rem, 50vw, 55rem);
  margin-inline: auto;
}
/* ----- about styling ends here ----- */

/* ----- services, Courses styling starts here ----- */
#services,
#courses {
  gap: clamp(1rem, 2vw, 2rem);
}

#services h3,
#courses h3 {
  margin-bottom: 1rem;
}

.services-list {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(19rem, 1fr));
  gap: clamp(1rem, 2vw, 2rem);
}
#services p,
#courses p {
  padding-left: 2rem;
}
/* ----- services styling ends here ----- */

/* ----- why-us styling starts here ----- */

#why-us h1 {
  line-height: 100%;
}

#why-us > div {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(min(80vw, 37rem), 1fr));
}

#why-us img {
  width: clamp(10rem, 80vw, 40rem);
}
/* ----- why-us styling ends here ----- */

/* ----- contact styling starts here ----- */

#contact form {
  display: grid;
  gap: clamp(0.5rem, 1vw, 1rem);
}

#contact input,
#contact textarea {
  background-color: var(--c-glass);
  border: none;
  outline: transparent;
  padding: 1rem;
  border-radius: 1.5rem;
}

#contact input[type="submit"] {
  width: min-content;
  padding-inline: 2rem;
}

#contact textarea {
  resize: vertical;
}

#contact div:has(img) {
  display: grid;
  overflow: hidden;
}

#contact img {
  width: 80%;
  transform: rotate(45deg);
  margin-inline: auto;
}

#contact > div:nth-child(3) > div {
  background: var(--c-glass);
  padding: 1rem;
  border-radius: 1.5rem;
  word-wrap: break-word;
}
/* ----- contact styling ends here ----- */

/* ----- footer styling starts here ----- */
footer {
  background: var(--c-glass);
  padding: 2rem;
  display: grid;
  justify-content: center;
  gap: 1rem;
}

footer div {
  display: flex;
  justify-content: center;
  gap: clamp(1rem, 4vw, 2rem);
}

footer i {
  font-size: clamp(1.5rem, 4vw, 3rem);
  transition: 1s cubic-bezier(0.075, 0.82, 0.165, 1);
}

footer i:hover {
  text-shadow: 0 0 15px var(--c-text);
}

footer p {
  color: color-mix(in srgb, var(--c-text), transparent);
}
/* ----- footer styling ends here ----- */

@media screen and (min-width: 40em) {
  p {
    font-size: 1.1rem;
    line-height: 140%;
  }

  h3 {
    font-size: 1.3rem;
  }

  nav {
    padding: 0 2rem;
  }
  #hamburger {
    display: none;
  }
  nav > div > a {
    display: block;
  }

  #home p {
    font-size: 1.2rem;
  }

  .about-card {
    display: flex;
    align-items: center;
  }

  .about-card:nth-child(3) {
    flex-direction: row-reverse;
  }

  #about h3,
  #about p {
    text-align: left;
  }

  #contact {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
    padding-top: 10%;
  }
}

